# kiddo

./: Cargo.toml
src/: best_neighbour.rs  custom_serde.rs  iter.rs  lib.rs  mirror_select_nth_unstable_by.rs  nearest_neighbour.rs  test_utils.rs  types.rs  within_unsorted_iter.rs
src/fixed/: construction.rs  distance.rs  kdtree.rs
src/fixed/query/: best_n_within.rs  nearest_n.rs  nearest_one.rs  within.rs  within_unsorted.rs  within_unsorted_iter.rs
src/float/: construction.rs  distance.rs  kdtree.rs  mod.rs  result_collection.rs
src/float/query/: best_n_within.rs  nearest_n.rs  nearest_n_within.rs  nearest_one.rs  within.rs  within_unsorted.rs  within_unsorted_iter.rs
src/float_leaf_simd/: f32_avx2.rs  f32_avx512.rs  f64_avx2.rs  f64_avx512.rs  f64_neon.rs  leaf_node.rs  mod.rs
src/hybrid/: construction.rs  distance.rs  kdtree.rs  neighbour.rs
src/hybrid/query/: best_n_within.rs  nearest_n.rs  nearest_one.rs  within.rs  within_unsorted.rs
src/immutable/common/: generate_immutable_approx_nearest_one.rs  generate_immutable_nearest_one.rs  mod.rs
src/immutable/float/: construction.rs  kdtree.rs
src/immutable/float/query/: approx_nearest_one.rs  best_n_within.rs  mod.rs  nearest_n.rs  nearest_n_within.rs  nearest_one.rs  within.rs  within_unsorted.rs
