[package]
name = "kiddo"
version = "4.2.0"
edition = "2021"
authors = ["Scott Donnelly <scott@donnel.ly>"]
description = "A high-performance, flexible, ergonomic k-d tree library. Ideal for geo- and astro- nearest-neighbour and k-nearest-neighbor queries"
keywords = ["kd-tree", "kdtree", "kd", "nearest-neighbor", "knn"]
readme = "README.md"
repository = "https://github.com/sdd/kiddo"
documentation = "https://docs.rs/kiddo"
license = "MIT OR Apache-2.0"
autobenches = false
resolver = "2"

[profile.release]
debug = true
lto = true
codegen-units = 1

[profile.bench]
debug = true
lto = true
codegen-units = 1
opt-level = 3

[dependencies]
log = "0.4"
num-traits = { version = "0.2", default-features = false, features = ["libm"] }
az = "1"
divrem = "1"
ordered-float = { version = "4", default-features = false }
itertools = { version = "0.12", default-features = false }
awkernel_lib = { path = "../../../awkernel_lib", default-features = false }

[dev-dependencies]
bincode = "1.3"
criterion = "0.5"
csv="1"
elapsed = "0.1"
flate2 = { version = "1", features = ["zlib-ng-compat"], default-features = false }
init_with = "1"
itertools = { version = "0.12", default-features = true }
log = "0.4"
memmap = "0.7"
proc-macro2 = { version = "1", features=["default", "proc-macro"] }
radians = "0.3"
rayon = "1"
rand = "0.8"
rand_distr = "0.4"
codspeed-criterion-compat = "2"
# required to be able to run tests without specifying --features=test_utils
# see https://github.com/rust-lang/cargo/issues/2911#issuecomment-749580481
kiddo = { path = ".", features = ["test_utils"] }

# [target.'cfg(any(target_arch = "x86_64", target_arch = "aarch64"))'.dependencies]
# generator = "0.7"

[dependencies.rayon]
version = "1"
optional = true

[dependencies.rand]
version = "0.8"
optional = true

[dependencies.rand_chacha]
version = "0.3"
optional = true

[dependencies.tracing]
version = "0.1"
optional = true

[dependencies.tracing-subscriber]
version = "0.3"
optional = true

[features]
default = ["tracing"]
global_allocate = []
immutable = []
simd = []
test_utils = ["rand", "rand_chacha", "rayon"]
tracing = ["dep:tracing", "tracing-subscriber"]

[package.metadata.docs.rs]
all-features = true

[[bench]]
name = "add_points"
harness = false
required-features = ["test_utils"]

[[bench]]
name = "nearest_one"
harness = false
required-features = ["test_utils"]

[[bench]]
name = "nearest_one_immutable"
harness = false
required-features = ["test_utils"]

[[bench]]
name = "nearest_n"
harness = false
required-features = ["test_utils"]

[[bench]]
name = "within"
harness = false
required-features = ["test_utils"]

[[bench]]
name = "within_unsorted"
harness = false
required-features = ["test_utils"]

[[bench]]
name = "best_n"
harness = false
required-features = ["test_utils"]

[[example]]
name = "immutable-large"
path = "examples/immutable-large.rs"
required-features = ["test_utils"]

[[example]]
name = "check-select-nth-unstable"
path = "examples/check-select-nth-unstable.rs"

[[example]]
name = "simd_leaf"
path = "examples/simd_leaf.rs"
required-features = ["test_utils"]

[[example]]
name = "avx2-check"
path = "examples/avx2-check.rs"

[[example]]
name = "half"
path = "examples/half.rs"
